feat: adopt policies authoritatively
